# reduction-effects

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  META.coq-reduction-effects  Make  Makefile  Makefile.local  PrintingEffect.v  PrintingEffect.v.cppo  README.md  _CoqProject  _CoqProject.cppo  coq-reduction-effect.opam  coq-reduction-effects.opam  meta.yml  redeffect.ml4  redeffect.mlg  redeffect.mlg.cppo  redeffect_plugin.mlpack
.circleci/: config.yml
.github/workflows/: docker-action.yml
tests/: Makefile  Makefile.coq.local  PrintEffect.expected  PrintEffect.v  _CoqProject
