opam-version: "2.0"
maintainer: "Yishuai Li <yishuai@cis.upenn.edu>"
version: "dev"

homepage: "https://github.com/coq-community/reduction-effects"
dev-repo: "git+https://github.com/coq-community/reduction-effects.git"
bug-reports: "https://github.com/coq-community/reduction-effects/issues"
license: "MPL-2.0"

synopsis: "A Coq plugin to add reduction side effects to some Coq reduction strategies"
description: """
"""

build:   [make "-j%{jobs}%"]
install: [make "-j%{jobs}%" "install"]
run-test:[make "-j%{jobs}%" "test"]
depends: [
  "coq" { >= "8.10" }
]

tags: [
  "logpath:ReductionEffect"
]
authors: [
  "Hugo Herbelin"
]
